# python-soundtrack-creator

./: README.md  dev-requirements.txt  metadata.csv  pyproject.toml  requirements.txt
src/soundtrack/: __init__.py  __main__.py  _tags.py  align_csv.py  audio.py  audioInfo.py  audio_info.py  audio_tags.py  dump.py  format.py  helpers.py  maker.py  soundtrack.py  video.py  videoSoundtrack.py
src/soundtrack/effect/: __init__.py  adjustable_fade.py  effect.py
src/soundtrack/soundtrack_types/: __init__.py  common.py  metadata_config.py  metadata_manifest.py  soundtrack_types.py
