[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-soundtrack-creator"
authors = [
  { name="ego-lay-atman-bay" },
]
# version = "0.0.1"
description = "Python library to create soundtracks."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "json5",
  "filetype",
  "audioman@git+https://github.com/ego-lay-atman-bay/audioman",
  "mutagen",
  "numpy",
  "Pillow",
  "pydub",
  "soundfile",
  "pathvalidate",
  "charset_normalizer",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ego-lay-atman-bay/python-soundtrack-creator/"
"Bug Tracker" = "https://github.com/ego-lay-atman-bay/python-soundtrack-creator/issues/"
"Documentation" = "https://ego-lay-atman-bay.github.io/python-soundtrack-creator/"

[tool.setuptools.dynamic]
version = { attr = "soundtrack.__version__" }
